--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Ignacio Sánchez
-description: Página personal de Ignacio Sánchez (Kooalaa28).
+title: Ignacio-Sánchez
+description: Matemático - Ingeniero Informático.
