--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Ignacio-Sánchez
-description: Matemático - Ingeniero Informático.
+description: Matemático && Ingeniero Informático.
